--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "koa-send": "^3.2.0",
     "koa-session": "^3.3.1",
     "koa-static": "^3.0.0",
-    "lasso": "^2.2.1",
-    "lasso-less": "^2.1.2",
-    "marko": "^3.1.2",
+    "lasso": "2.2.1",
+    "lasso-less": "2.1.2",
+    "marko": "3.1.2",
     "mysql": "^2.10.2",
     "sequelize": "^3.21.0"
   },
